--- a/index.Rmd
+++ b/index.Rmd
@@ -25,7 +25,7 @@ h3{color:rgb(26, 72, 112)}
 ```
 # **Datos del problema**
 
-```{r}
+```{r, warning=FALSE}
 library(readxl)
 habitaciones <- read_excel("C:/Users/User/Downloads/habitaciones.xlsx")
 colnames(habitaciones) <- c("Habitaciones", "Kilowatts_hora")
